SW characters search list
* Add Chakra-ui
* Add Axios configuration
* Add predictive searchbar, characters box components and alerts modals
* Add delete character configuration and toast delete notification

--- a/package.json
+++ b/package.json
@@ -1,12 +1,25 @@
 {
-  "name": "my-app",
+  "name": "wenance-challenge",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@chakra-ui/core": "^0.8.0",
+    "@chakra-ui/icons": "^1.1.1",
+    "@chakra-ui/react": "^1.7.4",
+    "@emotion/core": "^11.0.0",
+    "@emotion/react": "^11.7.1",
+    "@emotion/styled": "^11.6.0",
+    "@fontsource/open-sans": "^4.5.2",
+    "@fontsource/raleway": "^4.5.0",
     "@reduxjs/toolkit": "^1.7.1",
     "@testing-library/jest-dom": "^4.2.4",
     "@testing-library/react": "^9.5.0",
     "@testing-library/user-event": "^7.2.1",
+    "axios": "^0.24.0",
+    "emotion-theming": "^11.0.0",
+    "framer-motion": "^5.6.0",
+    "humps": "^2.0.1",
+    "lodash": "^4.17.21",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-redux": "^7.2.6",
